<resources>
    <string name="app_name">Machine à spam</string>
    <string name="number_label">Numéro</string>
    <string name="edit_number">Saisis le(s) numéro(s)</string>
    <string name="message_label">Message</string>
    <string name="edit_message">Tape ton message</string>
    <string name="send_button">Envoyer</string>
    <string name="sent_message">Message envoyé !</string>
    <string name="browse_button">+</string>
    <string name="how_many_label">Nombre d\'envois</string>
</resources>
