<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="fr.miage.tp1_couvrat_khomany.MainActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/number_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/number_label"
            />

        <Space
            android:layout_width="10dp"
            android:layout_height="10dp" />

        <com.android.ex.chips.RecipientEditTextView
            android:id="@+id/chipsContact"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="Sélectionne un contact"
            android:minHeight="58dp" />

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/show_all"
            />

    </LinearLayout>

    <Space
    android:layout_width="10dp"
    android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:text="@string/how_many_label"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:id="@+id/how_many_label"
            android:layout_weight="1"
            />

        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:inputType="number"
            android:layout_gravity="center"
            android:solidColor="@color/common_plus_signin_btn_text_light"
            android:id="@+id/how_many"
            android:scrollbarStyle="outsideInset">
        </NumberPicker>

    </LinearLayout>

    </LinearLayout>

    <Space
        android:layout_width="10dp"
        android:layout_height="30dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/message_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/messageLabel"
            android:layout_weight="1"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:inputType="textAutoComplete|textAutoCorrect|textCapSentences|textMultiLine"
            android:hint="@string/edit_message"
            android:ems="10"
            android:id="@+id/editMessage"
            android:layout_weight="1" />
    </LinearLayout>

    <Button
        android:text="@string/send_button"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="sendSMS"
        android:id="@+id/send"
        style="@style/Widget.AppCompat.Button.Colored"
        />


    <LinearLayout
        android:layout_marginTop="56dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



    </LinearLayout>

</LinearLayout>



